# AI-ENGINEERING-BOOTCAMP

./: .gitignore  Basic Setup.docx  roadmap.md
week1/day1/: README.md  hello_llm.py
week1/day2/: README.md  sys_temp.py
week1/day3/: README.md  pyproject.toml  tokens.py
week1/day4/: README.md  json_pydantic.py
week1/day5/: README.md  pyproject.toml
week2/day6/: README.md  prompt_eng.py  pyproject.toml
week2/day7/: README.md  pyproject.toml
