[project]
name = "day3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=1.5.0",
    "python-dotenv",
]

[tool.uv.workspace]
members = [
    "python-dotenv",
]

[tool.uv.sources]
python-dotenv = { workspace = true }
