[project]
name = "day5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=1.5.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-docx>=1.1.2",
]

[tool.uv.workspace]
members = [
    "resume",
]
